    Added: Conditional statement feature for install.xml files (copy_config items only)
    Fixed: Debug and verbose modes must be set early
    Fixed: Don't die on misconfigured server hostname. Just ask for a valid hostname instead
    Fixed: libmariadbclient18 package not provided in Debian Stretch (testing) repository
    Fixed: Plugin setup listeners are no longer registered (regression fix)
    Fixed: SQL user and password not correctly escaped in imscp.cnf file (Servers::sqld::mysql::installer)
    Moved: Master administrator questions and setup routines into Package::FrontEnd::Installer
    Renamed: imscp-setup script to imscp-reconfigure
    Transitional: Enforce PHP5 variant under Debian Stretch (testing) and Ubuntu 16.04 (Xenial Xerus)

PACKAGES
    Fixed: ERR_INCOMPLETE_CHUNKED_ENCODING error due to wrong permissions on nginx fastcgi cache directory (FrontEnd)
    Fixed: White page due to 'net::ERR_INCOMPLETE_CHUNKED_ENCODING' errors (related to #IP-1530) (PhpMyAdmin)
    Updated: PhpMyAdmin version to 4.6.0 - Only for servers with PHP/MySQL >= 5.5 (Package::PhpMyAdmin::Installer)

PLUGINS
    Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
    Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
    Fixed: Wrong events triggered when a plugin is being locked/unlocked
    Updated: API version to 1.0.4

SERVERS
    Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
    Added: Own i-MSCP ProFTPD sysvinit script to solve #IP-1402 - (Wheezy, Precise, Trusty)
    Changed: setenvif module is now always required ((Httpd servers)
    Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
    Fixed: Could not build local vsftpd package when gpg has been initialized; .changes file cannot be signed